--- a/exercises/08/index.html
+++ b/exercises/08/index.html
@@ -14,8 +14,7 @@
 <img src="../01/dbz.jpg">
 
 
-<a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5B7vV9FoQw-KAHV1adG5A1L9g5iTthKJj9Q&usqp=CAU"
-    target="_blank"> Source link</a>
+<a href="https://github.com/Shawn-Ebanks" target="_blank"> My Git Hub</a>
 
 <body>
     <div> This is Div one</div>
