--- a/exercises/13_bk-attachment/index.html
+++ b/exercises/13_bk-attachment/index.html
@@ -14,10 +14,10 @@
     <h1>Welcome to Nature Valley Zoo!</h1>
     <nav>
         <ul>
-            <li>Animals</li>
-            <li>Bookings</li>
-            <li>About</li>
-            <li>Contact</li>
+            <li><a href="#">Animals</a></li>
+            <li><a href="#">Bookings</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
 </header>
