--- a/exercises/13_bk-attachment/index.html
+++ b/exercises/13_bk-attachment/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Background</title>
+    <title>Nature Valley Zoo Project</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="main.css">
 
@@ -25,16 +25,36 @@
 
 <body>
     <section id="s1">
-        <p> Welcome to Africa</p>
+        <h2> Welcome to Africa</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam animi tempora aperiam distinctio. Voluptas aperiam consequuntur, vitae vero exercitationem quidem voluptate. Id nesciunt adipisci veniam, aspernatur et repellat autem quaerat!
+        Exercitationem impedit quos aliquid, beatae porro commodi? Inventore eos maxime blanditiis nemo, quibusdam asperiores ipsam tenetur neque nesciunt molestias dolorum, eum laborum repellendus rem ea voluptatem optio officia soluta incidunt!
+        Corrupti voluptate aliquid eveniet reiciendis dignissimos esse optio corporis. Assumenda dolor eligendi possimus voluptates repudiandae consequatur magni ipsum neque, quod laborum veritatis pariatur veniam delectus minima exercitationem atque quasi modi?
+        Inventore illo dolorum quibusdam numquam nemo dolorem dicta repellendus voluptatum nam minima, tenetur harum deserunt ut esse, iure deleniti molestias suscipit atque ad sapiente magni porro libero impedit! Molestias, debitis?</p>
     </section>
     <section id="s2">
-        <p> Welcome to Austrial</p>
+        <h2> Welcome to Austrial</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia laudantium iure nesciunt quo, optio deleniti sint, ullam tenetur vitae ut cumque, recusandae numquam. Impedit, nostrum est rerum aperiam voluptas ullam?
+        Saepe, iusto ducimus. Sint et repudiandae non alias, quia dolores consectetur veritatis animi totam tempore accusamus, quae architecto eaque libero officia sed facere vel! Earum vero quam libero eligendi incidunt.
+        Laborum quae porro asperiores excepturi repellat dolores in, aliquam sunt id iste illo aliquid repudiandae error est eos voluptatibus vitae accusantium! Similique corrupti facilis, dignissimos consequatur voluptates quisquam. Quasi, totam!
+        Tenetur quis ut rerum nulla voluptatem doloribus expedita sed tempore, autem beatae cupiditate eaque similique, cum accusamus adipisci obcaecati ipsam exercitationem ea in perspiciatis mollitia. Aspernatur commodi quod fugit ipsa.
+        Molestias corrupti quos delectus nihil consequuntur, similique doloribus harum, dolorum odit aliquid iste quia velit quas, vel iure veniam! Nostrum harum eos quod optio debitis soluta accusantium. Aperiam, mollitia inventore.
+        Aperiam, assumenda eum temporibus aliquam tempore repellat, nihil, dicta dolorem illum hic necessitatibus quaerat omnis odit aliquid labore excepturi! Harum doloribus qui cupiditate explicabo doloremque in iusto voluptatibus assumenda cumque?</p>
     </section>
     <section id="s3">
-        <p>Welcome to the Caribbean</p>
+        <h2>Welcome to the Caribbean</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dicta incidunt aliquam suscipit perferendis maiores nulla blanditiis, nihil asperiores culpa ducimus neque, molestiae corporis eaque provident sapiente accusantium aut consequatur.
+        Ipsum, tempore expedita minus fugiat molestias commodi modi magni pariatur, quo nobis quidem mollitia quibusdam nihil exercitationem numquam enim optio! Magni modi nulla deserunt. Architecto sed omnis culpa tempore deleniti.
+        Id ipsam aperiam laudantium autem, nulla saepe iure. Laudantium quae voluptatum vero dolore voluptates et? Tempore, velit reiciendis quo, vitae sunt aliquid praesentium aperiam veritatis, nam deleniti maxime dolorem eum.
+        Et consequuntur dignissimos amet in ipsa est corrupti tenetur perspiciatis illum temporibus soluta ex voluptatum, architecto eius aperiam corporis aliquam quisquam tempora labore cum. Dolore quae quos consequuntur incidunt recusandae?
+        Possimus similique modi soluta ex delectus veniam corrupti ut totam sint quo quae ducimus esse exercitationem ullam distinctio eveniet, non, saepe animi perspiciatis beatae laborum quasi voluptates officiis vitae. Necessitatibus.</p>
     </section>
     <section id="s4">
-        <p>Welcome to the Artic</p>
+        <h2>Welcome to the Artic</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis cum suscipit, autem numquam natus sit veniam cupiditate rerum molestias dolorem quod expedita voluptas quidem repellendus eum consequuntur. Ipsum, enim est.
+        Corrupti deserunt tempore illum temporibus velit sequi, molestias tenetur recusandae ex quasi ipsum, vel distinctio aliquam reprehenderit autem quis minima enim eveniet laborum! Ipsum, alias officiis voluptatum voluptates sunt recusandae!
+        Quo temporibus possimus quis vero distinctio eos minus voluptas praesentium fuga quia officiis, deleniti harum soluta hic obcaecati quae molestias! Error aperiam est eveniet dignissimos odit, rerum similique soluta exercitationem!
+        Cumque placeat quasi doloremque vel id consectetur quas saepe. At, eaque dolore. Odio eum sint tempore, nostrum, asperiores veniam eligendi iste quae nisi, dignissimos repellendus qui minima harum voluptate ad.
+        Repudiandae voluptas ut impedit sed labore nihil dolore natus odio veritatis iure quos rerum cupiditate beatae quaerat placeat ipsa autem, officia dolores magnam tempora? Accusamus consequatur perferendis hic vero ab.</p>
     </section>
 
 
