--- a/exercises/08-image-and-link/index.html
+++ b/exercises/08-image-and-link/index.html
@@ -11,7 +11,7 @@
 </head>
 <br>
 <h1> Dragon Ball Z Wallpaper</h1>
-<img src="../01/dbz.jpg">
+<img src="dbz.jpg">
 
 
 <a href="https://github.com/Shawn-Ebanks" target="_blank"> My Git Hub</a>
