--- a/exercises/09_surfer-page/index.html
+++ b/exercises/09_surfer-page/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <img src="../01/surf.jpg" alt="">
+    <img src="surf.jpg" alt="">
     <h1 id="primary"> Header 001 <h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo temporibus provident optio assumenda,
                 fugiat
